--- a/Develop/package.json
+++ b/Develop/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^6.3.1"
+    "axios": "^0.19.2",
+    "dotenv": "^8.0.0",
+    "inquirer": "^8.2.4",
+    "prompt": "^1.3.0"
   }
 }
